# color_space_conversion

./: CMakeLists.txt  README.md  big_buck_bunny_original.tif  brainstorm.txt  final_cleanup_notes.txt  main.c
docs/: brainstorm.txt
