cmake_minimum_required(VERSION 3.16)
project(color_space_conversion C)

set(CMAKE_C_STANDARD 11)
find_package(TIFF REQUIRED)
find_package(Threads REQUIRED)
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DDEBUG")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread -save-temps -fverbose-asm -march='armv8-a+simd' -mtune='cortex-a53' -O0")
add_executable(color_space_conversion main.c)
target_link_libraries(color_space_conversion TIFF::TIFF)
target_link_libraries(color_space_conversion Threads::Threads)